Deleted frontend folder

--- a/Backend/app/templates/prediction.html
+++ b/Backend/app/templates/prediction.html
@@ -50,7 +50,7 @@
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
-                    <h2>{{ category }}</h2>
+                    <!-- <h2>{{ category }}</h2> -->
                 </div>
             </div>
         </div>
